# DP-RAG-Research

./: bench_embed.py  chatdoctor_data.py  check_clipping.py  dp_model.py  dp_rag_engine.py  experiment_params.py  local_dp_rag_engine.py  openrouter_model.py  prefilter_engine.py  prefilter_strategies.py  pup_vector_store.py  pyproject.toml  smoke_prefilter_engine.py  stage1_consistency.py  stage2_temperature_sweep.py  test_embed.py  test_prefilter_strategies.py  test_smoke_dprag.py
results/: smoke_10000x20.json  smoke_1000x20.json
